--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@
 body{
     width: 100%;
     height: 100vh;
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--background-color) !important;
+    color: var(--text-color) !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
