--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ input{
     position: relative;
 }
 
+input[type="submit"]{
+    margin-bottom: 1rem;
+}
+
 footer{
     bottom: 0;
     height: 20px;
