--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,12 @@ input{
     position: relative;
 }
 
+input[type="submit"], input[type="reset"]{
+    margin: 0.5rem;
+}
+
 footer{
+    padding: 0.5rem;
     bottom: 0;
     height: 20px;
     border-top: 2px solid var(--text-color);
